# qlogicae-cor1

./: .gitignore  README.md  qlogicae-cor1.code-workspace  qlogicae_cor.code-workspace  qlogicae_cor.sln  qlogicae_core.sln
.github/workflows/: typescript-quality-assurance.yml
.project/public/tooling/: root_on_sync_filesystem.py
a/: a.cpp  a.vcxproj
demo_1/: demo_1.cpp  demo_1.vcxproj  demo_1.vcxproj.filters
devops/public/configuration/: settings.json
experiment_A_1/: experiment_A_1.vcxproj  experiment_A_1.vcxproj.filters  framework.hpp  pch.hpp
experiment_A_1/qlogicae_cpp_core/includes/: abstract_configurations.hpp  abstract_enum.hpp  all.hpp  argon2id_hash_cryptography_manager_configurations.hpp  asynchronous_batch_manager_configurations.hpp  character_domain.hpp  character_domain_enum_manager.hpp  character_domain_manager_configurations.hpp  configuration_manager.hpp  console_io_manager.hpp  console_log_manager.hpp  console_log_manager_configurations.hpp  cryptography_migration_manager.hpp  csv_file_io_manager_configurations.hpp  dilithium_cryptography_manager_configurations.hpp  email_body.hpp  email_body_enum_manager.hpp  email_body_enum_manager_configurations.hpp  email_security.hpp  email_security_enum_manager.hpp  entity_activation_manager.hpp  entity_activation_manager_configurations.hpp  entity_activation_status.hpp  enum_manager.hpp  file_system_entity.hpp  file_system_entity_enum_manager_configurations.hpp  file_system_listener_manager.hpp  file_system_manager.hpp  (+65 more)
experiment_B_1/: experiment_B_1.vcxproj  experiment_B_1.vcxproj.filters
experiment_B_2/: experiment_B_2.vcxproj  experiment_B_2.vcxproj.filters  pch.hpp
experiment_B_3/: experiment_B_3.vcxproj  experiment_B_3.vcxproj.filters
python/: .coverage  .gitignore  README.md  pyproject.toml  requirements.txt
python/sources/qlogicae_cor1.egg-info/: PKG-INFO  SOURCES.txt
python/test/: test_main.py
python/tests/: test_main.py
qlogicae/: qlogicae.vcxproj
qlogicae_cor/: pch.cpp  pch.hpp  qlogicae_cor.vcxproj  qlogicae_cor.vcxproj.filters
qlogicae_cor1/: qlogicae_cor1.vcxproj  qlogicae_cor1.vcxproj.filters
qlogicae_cor1_benchmarks/: main.cpp  main.hpp  pch.cpp  pch.hpp  qlogicae_cor1_benchmarks.vcxproj  qlogicae_cor1_benchmarks.vcxproj.filters
qlogicae_cor1_layer_1/: qlogicae_cor1_layer_1.vcxproj  qlogicae_cor1_layer_1.vcxproj.filters
qlogicae_cor1_layer_2/: pch.hpp  qlogicae_cor1_layer_2.vcxproj  qlogicae_cor1_layer_2.vcxproj.filters
qlogicae_cor1_layer_3/: pch.hpp  qlogicae_cor1_layer_3.vcxproj  qlogicae_cor1_layer_3.vcxproj.filters
qlogicae_cor1_layer_4/: pch.hpp  qlogicae_cor1_layer_4.vcxproj  qlogicae_cor1_layer_4.vcxproj.filters
qlogicae_cor1_legacy/: pch.hpp  qlogicae_cor1.vcxproj.filters
qlogicae_cor1_sandbox/: main.cpp  main.hpp  pch.cpp  pch.hpp  qlogicae_cor1_sandbox.vcxproj  qlogicae_cor1_sandbox.vcxproj.filters  script.py
qlogicae_cor1_temporary/: qlogicae_cor1_temporary.vcxproj  qlogicae_cor1_temporary.vcxproj.filters
qlogicae_cor1_temporary1/: pch.hpp
qlogicae_cor1_temporary2/: qlogicae_cor1.vcxproj
qlogicae_cor1_temporary_template/: qlogicae_cor1_temporary_template.vcxproj  qlogicae_cor1_temporary_template.vcxproj.filters  qlogicae_cor1_utilities.cpp
qlogicae_cor1_test/: qlogicae_cor1_tests.vcxproj  qlogicae_cor1_tests.vcxproj.filters
qlogicae_cor1_tests/: main.cpp  main.hpp  pch.cpp  pch.hpp  qlogicae_cor1_tests.vcxproj
qlogicae_cor1_utilities/: qlogicae_cor1_utilities.vcxproj  qlogicae_cor1_utilities.vcxproj.filters
qlogicae_core/: pch.hpp  qlogicae_core.vcxproj
qlogicae_cpp_core/: framework.hpp  pch.cpp  pch.hpp  qlogicae_cpp_core.vcxproj  qlogicae_cpp_core.vcxproj.filters
qlogicae_cpp_core_benchmark/: main.cpp  main.hpp  pch.cpp  pch.hpp  qlogicae_cpp_core_benchmark.vcxproj
qlogicae_cpp_core_sandbox/: main.cpp  main.hpp  model.py  pch.cpp  pch.hpp  qlogicae_cpp_core_sandbox.vcxproj  qlogicae_cpp_core_sandbox.vcxproj.filters
qlogicae_cpp_core_test/: framework.hpp  main.cpp  main.hpp  model.onnx  pch.cpp  pch.hpp  qlogicae_cpp_core_test.vcxproj  qlogicae_cpp_core_test.vcxproj.filters
rust/: Cargo.toml
selection/python/: pyproject.toml
selection/typescript/: .npmignore  index.ts  package.json  vitest.unit.config.ts
typescript/: .gitignore  .npmignore  README.md  esbuild.js  package.json  tsconfig.json  vitest.bench.config.ts
typescript/.configurations/: .prettierignore  esbuild.js  eslint.config.js  tsconfig.json
typescript/.sandbox/: index.ts  package.json
typescript/configurations/: esbuild.js  eslint.config.js  obfuscate.js  tsconfig.json  vitest.bench.config.ts  vitest.config.ts  vitest.unit.config.ts
typescript/test/: errorManager.bench.ts  errorManager.test.ts
workspace/public/tooling/: clean.py  debug_cache.py  demo.py  git_acp.py  pyproject.toml  requirements.txt  setup_filesystem.py  setup_installation.py  verify_toolset.py
workspace/public/tooling/all/: cache.py  filesystem.py  filesystem_setup.py  handler.py  log_format.py  setup_filesystem.py  timestamp.py  utility.py  verify_tools.py
workspace/public/tooling/devops/: verify_toolset.py
workspace/public/tooling/run/: demo.py  script.py
workspace/public/tooling/run/cache/: view.py
workspace/public/tooling/run/code/: format.py  lint.py
workspace/public/tooling/run/codebase/: format.py  lint.py
workspace/public/tooling/run/filesystem/: clean.py  setup.py
workspace/public/tooling/run/project/: build.py  deploy.py  setup.py
workspace/public/tooling/run/test/: benchmark.py  unit.py
workspace/public/tooling/run/toolset/: verify.py
workspace/public/tooling/script/: build.py  clean.py  debug.py  debug_cache.py  format.py  install.py  lint.py  test.py  verify_toolset.py
workspace/public/tooling/typescript/: setup.py  utility.py  verify_tools.py
workspace/public/tooling/utility/: cache.py  console_logger.py  file_logger.py  filesystem.py  handler.py  log_format.py  logger.py  system.py  timestamp.py
workspace/public/tooling/workspace/: clean.py  clean_temporary.py  debug_cache.py  setup_filesystem.py  setup_installation.py  verify_toolset.py
(+2625 files in other folders)
