[build-system]
requires = ["setuptools>=80", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qlogicae-cor1"
version = "1.0.1"
description = "The core library for the QLogicae framework"
readme = "README.md"
requires-python = ">=3.14"
license = "MIT"

authors = [
    { name = "Vaughn Cedric L. Araneta", email = "vaughncedriclipardoaraneta@gmail.com" }
]

classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"
]

dependencies = []

[tool.setuptools]
package-dir = {"" = "sources"}

[tool.setuptools.packages.find]
where = ["sources"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.mypy]
strict = true
warn_return_any = true
warn_unused_configs = true
warn_unreachable = true
warn_no_return = true
disallow_any_generics = true
disallow_any_unimported = true
explicit_package_bases = true
namespace_packages = true
files = ["sources", "tests"]

[tool.ruff]
line-length = 88
target-version = "py314"
exclude = [
    ".venv",
    ".git",
    "__pycache__",
    ".output",
    "output",
    ".outputs",
    "outputs",
    ".dist",
    "dist",
    ".build",
    "build",
]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = []
fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.hatch.envs.default.scripts]
job-lint = "mypy ."
job-format = "ruff check . --fix && ruff format ."
job-clean-build = "rm -rf .outputs/build && mkdir -p .outputs/build"
job-clean-test-unit = "rm -rf .outputs/reports/tests/unit && mkdir -p .outputs/reports/tests/unit"
job-clean-test-benchmarks = "rm -rf .outputs/reports/tests/benchmarks && mkdir -p .outputs/reports/tests/benchmarks"
job-build = "hatch run job-clean-build && hatch build && mv dist/* .outputs/build && rm -rf dist && rm -rf build"
workflow-test-unit = "hatch run job-clean-test-unit && pytest -vv --cov=sources --cov-branch --cov-report=term-missing --cov-report=html:.outputs/reports/tests/unit/html --cov-report=xml:.outputs/reports/tests/unit/coverage.xml --cov-report=json:.outputs/reports/tests/unit/coverage.json --junitxml=.outputs/reports/tests/unit/junit.xml && rm -rf .benchmarks"
workflow-test-benchmarks = "job-clean-test-benchmarks && pytest -vv --benchmark-enable --benchmark-json=.outputs/reports/tests/benchmarks/benchmark.json"
