[package]
name = "qlogicae-cor1"
version = "1.0.0"
edition = "2024"
description = "The core library for the QLogicae framework"
license = "MIT"
repository = "https://github.com/CedricDeVon/qlogicae-cor1"
readme = "README.md"
keywords = ["qlogicae", "cor1", "framework", "library", "package", "rust"]
categories = ["development-tools"]

[dependencies]
