[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "qlogicae-logis"
version = "1.0.0"
description = "The core library for the QLogicae framework"
requires-python = ">=3.14"
license = "MIT"

authors = [
    { name = "Vaughn Cedric L. Araneta", email = "vaughncedriclipardoaraneta@gmail.com" }
]

classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"
]

dependencies = []

[tool.ruff]
line-length = 80
target-version = "py314"
exclude = [
    ".venv",
    ".git",
    "__pycache__",
    ".output",
    "output",
    ".outputs",
    "outputs",
    ".dist",
    "dist",
    ".build",
    "build",
]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = []
fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
docstring-code-format = true
docstring-code-line-length = 80
skip-magic-trailing-comma = false

[tool.hatch.envs.default.scripts]
lint = "ruff check ."
format = "ruff format ."
audit-security = "pip-audit"

[tool.hatch.envs.default]
skip-install = true